--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             3. Remember to watch the diagonals- you can win from corner to corner across all levels.
         </p>
         <h2>Good luck!</h2>
-        <button class="close-modal">Play</button>
+        <button id="close-modal" class="button">Play</button>
       </div>
     </section>
 
@@ -41,11 +41,11 @@
             2. Statistic 2<br><br>
             3. Statistic 3
         </p>
-        <button class="close-modal">Play Again</button>
+        <button id="play-again" class="button">Play Again</button>
       </div>
     </section>
 
-    <h1>Qubic</h1> <button id="reset">Reset</button>
+    <h1>Qubic</h1> <button id="reset" class="button">Reset</button>
     <h2 id="message">Time to get your game on!</h2>
     <section class="board">
       <div class="level-one">
