Got local storage saving history

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             3. Statistic 3
         </p>
         <button id="play-again" class="button">Play Again</button>
+        <button id="reset-stats" class="button">Clear History</button>
       </div>
     </section>
 
