--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h1>Welcome to Qubic!</h1>
         <p>
             To begin, hit play. You will enter the Qubic Zone (QZ). In the QZ, there are three dimensions.
-            Qubic is similar to tic-tac-toe meets connect four meets THE THIRD DIMENSION.
+            Qubic is  Tic-Tac-Toe meets Connect Four meets THE THIRD DIMENSION.
         </p>
         <h1>RULES:</h1>
         <p id="rules"> 
             1. You and another player will alternate turns placing pieces on any un-claimed spots on the board.<br><br>
             2. If a player achieves four contiguous pieces placed, they win!<br><br>
-            3. Remember to watch the diagonals- you can win from corner to corner across all levels.
+            3. Remember to watch the diagonals- you can win across all dimensions.
         </p>
         <h2>Good luck!</h2>
         <button id="close-modal" class="button">Play</button>
@@ -33,14 +33,10 @@
       <div id="modal-content">
         <h1>Congrats on playing!</h1>
         <p>
-            you played a game!
+            You played a game!
         </p>
         <h1>Game Stats:</h1>
-        <p id="stats"> 
-            1. Statistic 1<br><br>
-            2. Statistic 2<br><br>
-            3. Statistic 3
-        </p>
+        <p id="stats"> </p>
         <button id="play-again" class="button">Play Again</button>
         <button id="reset-stats" class="button">Clear History</button>
       </div>
