added floating game header

--- a/index.html
+++ b/index.html
@@ -43,82 +43,84 @@
     </section>
 
     <section class="board">
-    <h1>Qubic</h1> <button id="reset" class="button">Reset</button>
-    <h2 id="message">Time to get your game on!</h2>
+      <section class="game-header">
+        <h1>Qubic</h1>
+        <button id="reset" class="button">Reset</button>
+        <h2 id="message">Time to get your game on!</h2>
+      </section>
       <div class="level-one">
-      <div class="sqr" id="0"></div>
-      <div class="sqr" id="1"></div>
-      <div class="sqr" id="2"></div>
-      <div class="sqr" id="3"></div>
-      <div class="sqr" id="4"></div>
-      <div class="sqr" id="5"></div>
-      <div class="sqr" id="6"></div>
-      <div class="sqr" id="7"></div>
-      <div class="sqr" id="8"></div>
-      <div class="sqr" id="9"></div>
-      <div class="sqr" id="10"></div>
-      <div class="sqr" id="11"></div>
-      <div class="sqr" id="12"></div>
-      <div class="sqr" id="13"></div>
-      <div class="sqr" id="14"></div>
-      <div class="sqr" id="15"></div>
+        <div class="sqr" id="0"></div>
+        <div class="sqr" id="1"></div>
+        <div class="sqr" id="2"></div>
+        <div class="sqr" id="3"></div>
+        <div class="sqr" id="4"></div>
+        <div class="sqr" id="5"></div>
+        <div class="sqr" id="6"></div>
+        <div class="sqr" id="7"></div>
+        <div class="sqr" id="8"></div>
+        <div class="sqr" id="9"></div>
+        <div class="sqr" id="10"></div>
+        <div class="sqr" id="11"></div>
+        <div class="sqr" id="12"></div>
+        <div class="sqr" id="13"></div>
+        <div class="sqr" id="14"></div>
+        <div class="sqr" id="15"></div>
       </div>
-    <div class="level-two">
-      <div class="sqr" id="16"></div>
-      <div class="sqr" id="17"></div>
-      <div class="sqr" id="18"></div>
-      <div class="sqr" id="19"></div>
-      <div class="sqr" id="20"></div>
-      <div class="sqr" id="21"></div>
-      <div class="sqr" id="22"></div>
-      <div class="sqr" id="23"></div>
-      <div class="sqr" id="24"></div>
-      <div class="sqr" id="25"></div>
-      <div class="sqr" id="26"></div>
-      <div class="sqr" id="27"></div>
-      <div class="sqr" id="28"></div>
-      <div class="sqr" id="29"></div>
-      <div class="sqr" id="30"></div>
-      <div class="sqr" id="31"></div>
-    </div>
-    <div class="level-three">
-      <div class="sqr" id="32"></div>
-      <div class="sqr" id="33"></div>
-      <div class="sqr" id="34"></div>
-      <div class="sqr" id="35"></div>
-      <div class="sqr" id="36"></div>
-      <div class="sqr" id="37"></div>
-      <div class="sqr" id="38"></div>
-      <div class="sqr" id="39"></div>
-      <div class="sqr" id="40"></div>
-      <div class="sqr" id="41"></div>
-      <div class="sqr" id="42"></div>
-      <div class="sqr" id="43"></div>
-      <div class="sqr" id="44"></div>
-      <div class="sqr" id="45"></div>
-      <div class="sqr" id="46"></div>
-      <div class="sqr" id="47"></div>
-    </div>
-    <div class="level-four">
-      <div class="sqr" id="48"></div>
-      <div class="sqr" id="49"></div>
-      <div class="sqr" id="50"></div>
-      <div class="sqr" id="51"></div>
-      <div class="sqr" id="52"></div>
-      <div class="sqr" id="53"></div>
-      <div class="sqr" id="54"></div>
-      <div class="sqr" id="55"></div>
-      <div class="sqr" id="56"></div>
-      <div class="sqr" id="57"></div>
-      <div class="sqr" id="58"></div>
-      <div class="sqr" id="59"></div>
-      <div class="sqr" id="60"></div>
-      <div class="sqr" id="61"></div>
-      <div class="sqr" id="62"></div>
-      <div class="sqr" id="63"></div>
-    </div>
+      <div class="level-two">
+        <div class="sqr" id="16"></div>
+        <div class="sqr" id="17"></div>
+        <div class="sqr" id="18"></div>
+        <div class="sqr" id="19"></div>
+        <div class="sqr" id="20"></div>
+        <div class="sqr" id="21"></div>
+        <div class="sqr" id="22"></div>
+        <div class="sqr" id="23"></div>
+        <div class="sqr" id="24"></div>
+        <div class="sqr" id="25"></div>
+        <div class="sqr" id="26"></div>
+        <div class="sqr" id="27"></div>
+        <div class="sqr" id="28"></div>
+        <div class="sqr" id="29"></div>
+        <div class="sqr" id="30"></div>
+        <div class="sqr" id="31"></div>
+      </div>
+      <div class="level-three">
+        <div class="sqr" id="32"></div>
+        <div class="sqr" id="33"></div>
+        <div class="sqr" id="34"></div>
+        <div class="sqr" id="35"></div>
+        <div class="sqr" id="36"></div>
+        <div class="sqr" id="37"></div>
+        <div class="sqr" id="38"></div>
+        <div class="sqr" id="39"></div>
+        <div class="sqr" id="40"></div>
+        <div class="sqr" id="41"></div>
+        <div class="sqr" id="42"></div>
+        <div class="sqr" id="43"></div>
+        <div class="sqr" id="44"></div>
+        <div class="sqr" id="45"></div>
+        <div class="sqr" id="46"></div>
+        <div class="sqr" id="47"></div>
+      </div>
+      <div class="level-four">
+        <div class="sqr" id="48"></div>
+        <div class="sqr" id="49"></div>
+        <div class="sqr" id="50"></div>
+        <div class="sqr" id="51"></div>
+        <div class="sqr" id="52"></div>
+        <div class="sqr" id="53"></div>
+        <div class="sqr" id="54"></div>
+        <div class="sqr" id="55"></div>
+        <div class="sqr" id="56"></div>
+        <div class="sqr" id="57"></div>
+        <div class="sqr" id="58"></div>
+        <div class="sqr" id="59"></div>
+        <div class="sqr" id="60"></div>
+        <div class="sqr" id="61"></div>
+        <div class="sqr" id="62"></div>
+        <div class="sqr" id="63"></div>
+      </div>
     </section>
     <br>
-    
   </body>
 </html>
