images appear to be working

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script defer src="./js/app.js"></script>
     <title>Qubic</title>
+    <!-- Open Graph meta data-->
+      <meta property="og:title" content="Qubic" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://zbrustkern.github.io/qubic/" />
+      <meta property="og:image" content="./assets/thumbnails.png" />
+      <meta property="og:description" content="This is a website to play 3d tic tac toe." />
   </head>
   <body>
     <section id="open-modal">
