attempting to remove the parent dir path per a stack overflow answer

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <meta property="og:title" content="Qubic" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://zbrustkern.github.io/qubic/" />
-      <meta property="og:image" content="./assets/thumbnails.png" />
-      <meta property="og:description" content="This is a website to play 3d tic tac toe." />
+      <meta property="og:image" content="../assets/thumbnails.png" />
+      <meta property="og:description" content="Enter the Qubic Zone. You won't be disappointed." />
   </head>
   <body>
     <section id="open-modal">
