updated win messages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="modal-content">
         <h1>Congrats on playing!</h1>
         <p>
-            You played a game!
+            Hope you had fun in the Qubic Zone!
         </p>
         <h1>Game Stats:</h1>
         <p id="stats"> </p>
