added a demo GIF

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             To begin, hit play. You will enter the Qubic Zone (QZ). In the QZ, there are three dimensions.
             Qubic is  Tic-Tac-Toe meets Connect Four meets THE THIRD DIMENSION.
         </p>
+        <img src="./assets/qubic-clip.gif" alt="a clip of playing the game">
         <h1>RULES:</h1>
         <p id="rules"> 
             1. You and another player will alternate turns placing pieces on any un-claimed spots on the board.<br><br>
