--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta property="og:title" content="Qubic" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://zbrustkern.github.io/qubic/" />
-      <meta property="og:image" content="../assets/thumbnails.png" />
+      <meta property="og:image" content="./assets/thumbnails.png" />
       <meta property="og:description" content="Enter the Qubic Zone. You won't be disappointed." />
   </head>
   <body>
